var searchData=
[
  ['p_5f3072_0',['p_3072',['../constants_8c.html#aea10fa29a37974dd31a360c893e2ec72',1,'p_3072:&#160;constants.c'],['../constants_8h.html#a10e57212c03d00664077fefb6ff21c7f',1,'p_3072:&#160;constants.c']]],
  ['pad_1',['pad',['../struct_hashed_el_gamal_ciphertext_proto.html#a231bb562171c488da6ab588afdee6972',1,'HashedElGamalCiphertextProto::pad'],['../struct_hashed_el_gamal_ciphertext.html#afcec436515073c378d5f114256ea8759',1,'HashedElGamalCiphertext::pad'],['../struct_chaum_pedersen_proof.html#a2f09958fb8824c87312d45ae84eb0ca1',1,'ChaumPedersenProof::pad']]],
  ['plaintext_5fballot_5fcontest_5fproto_5f_5fdescriptor_2',['plaintext_ballot_contest_proto__descriptor',['../ballot_8pb-c_8c.html#a9f9957483ed0c6f1ca992e57aebbad24',1,'plaintext_ballot_contest_proto__descriptor:&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a9f9957483ed0c6f1ca992e57aebbad24',1,'plaintext_ballot_contest_proto__descriptor:&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fcontest_5fproto_5f_5ffree_5funpacked_3',['plaintext_ballot_contest_proto__free_unpacked',['../ballot_8pb-c_8c.html#a9136519ba621f64600451f19624010dd',1,'plaintext_ballot_contest_proto__free_unpacked(PlaintextBallotContestProto *message, ProtobufCAllocator *allocator):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a9136519ba621f64600451f19624010dd',1,'plaintext_ballot_contest_proto__free_unpacked(PlaintextBallotContestProto *message, ProtobufCAllocator *allocator):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fcontest_5fproto_5f_5fget_5fpacked_5fsize_4',['plaintext_ballot_contest_proto__get_packed_size',['../ballot_8pb-c_8c.html#a38239d01cd4669c037fc44628e9b2f30',1,'plaintext_ballot_contest_proto__get_packed_size(const PlaintextBallotContestProto *message):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a38239d01cd4669c037fc44628e9b2f30',1,'plaintext_ballot_contest_proto__get_packed_size(const PlaintextBallotContestProto *message):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fcontest_5fproto_5f_5finit_5',['plaintext_ballot_contest_proto__init',['../ballot_8pb-c_8c.html#a23b381bce00ebd737465dcf39c1ff7fa',1,'plaintext_ballot_contest_proto__init(PlaintextBallotContestProto *message):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a23b381bce00ebd737465dcf39c1ff7fa',1,'plaintext_ballot_contest_proto__init(PlaintextBallotContestProto *message):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fcontest_5fproto_5f_5finit_6',['PLAINTEXT_BALLOT_CONTEST_PROTO__INIT',['../ballot_8pb-c_8h.html#a43c79b9c721b75330e8d980e319e52e3',1,'ballot.pb-c.h']]],
  ['plaintext_5fballot_5fcontest_5fproto_5f_5fpack_7',['plaintext_ballot_contest_proto__pack',['../ballot_8pb-c_8c.html#a50c54e4c0790a33d87a59368c4b699b7',1,'plaintext_ballot_contest_proto__pack(const PlaintextBallotContestProto *message, uint8_t *out):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a50c54e4c0790a33d87a59368c4b699b7',1,'plaintext_ballot_contest_proto__pack(const PlaintextBallotContestProto *message, uint8_t *out):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fcontest_5fproto_5f_5fpack_5fto_5fbuffer_8',['plaintext_ballot_contest_proto__pack_to_buffer',['../ballot_8pb-c_8c.html#aaf61c115251f86aade0a6123cd5420b3',1,'plaintext_ballot_contest_proto__pack_to_buffer(const PlaintextBallotContestProto *message, ProtobufCBuffer *buffer):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#aaf61c115251f86aade0a6123cd5420b3',1,'plaintext_ballot_contest_proto__pack_to_buffer(const PlaintextBallotContestProto *message, ProtobufCBuffer *buffer):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fcontest_5fproto_5f_5funpack_9',['plaintext_ballot_contest_proto__unpack',['../ballot_8pb-c_8c.html#a3e96c9a7e769f5e412a3f7dd27932fee',1,'plaintext_ballot_contest_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a3e96c9a7e769f5e412a3f7dd27932fee',1,'plaintext_ballot_contest_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fproto_5f_5fdescriptor_10',['plaintext_ballot_proto__descriptor',['../ballot_8pb-c_8c.html#a47bf39346e779edc3ce3631d62b4da94',1,'plaintext_ballot_proto__descriptor:&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a47bf39346e779edc3ce3631d62b4da94',1,'plaintext_ballot_proto__descriptor:&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fproto_5f_5ffree_5funpacked_11',['plaintext_ballot_proto__free_unpacked',['../ballot_8pb-c_8c.html#a6cde6feb2e2905b1fe5a156a6cc0d946',1,'plaintext_ballot_proto__free_unpacked(PlaintextBallotProto *message, ProtobufCAllocator *allocator):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a6cde6feb2e2905b1fe5a156a6cc0d946',1,'plaintext_ballot_proto__free_unpacked(PlaintextBallotProto *message, ProtobufCAllocator *allocator):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fproto_5f_5fget_5fpacked_5fsize_12',['plaintext_ballot_proto__get_packed_size',['../ballot_8pb-c_8c.html#afcf795988bf5620b3eb656e69b154c99',1,'plaintext_ballot_proto__get_packed_size(const PlaintextBallotProto *message):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#afcf795988bf5620b3eb656e69b154c99',1,'plaintext_ballot_proto__get_packed_size(const PlaintextBallotProto *message):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fproto_5f_5finit_13',['PLAINTEXT_BALLOT_PROTO__INIT',['../ballot_8pb-c_8h.html#a047fd832b53d28c409d8938c86037deb',1,'ballot.pb-c.h']]],
  ['plaintext_5fballot_5fproto_5f_5finit_14',['plaintext_ballot_proto__init',['../ballot_8pb-c_8c.html#aad2fb92157210abf0b322dbeb1533d2b',1,'plaintext_ballot_proto__init(PlaintextBallotProto *message):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#aad2fb92157210abf0b322dbeb1533d2b',1,'plaintext_ballot_proto__init(PlaintextBallotProto *message):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fproto_5f_5fpack_15',['plaintext_ballot_proto__pack',['../ballot_8pb-c_8c.html#ad6ea43abb4481fcb7d02d24599d6bb97',1,'plaintext_ballot_proto__pack(const PlaintextBallotProto *message, uint8_t *out):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#ad6ea43abb4481fcb7d02d24599d6bb97',1,'plaintext_ballot_proto__pack(const PlaintextBallotProto *message, uint8_t *out):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fproto_5f_5fpack_5fto_5fbuffer_16',['plaintext_ballot_proto__pack_to_buffer',['../ballot_8pb-c_8c.html#a6217f6bd8edc4e4ae5fc32e151ff4bed',1,'plaintext_ballot_proto__pack_to_buffer(const PlaintextBallotProto *message, ProtobufCBuffer *buffer):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a6217f6bd8edc4e4ae5fc32e151ff4bed',1,'plaintext_ballot_proto__pack_to_buffer(const PlaintextBallotProto *message, ProtobufCBuffer *buffer):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fproto_5f_5funpack_17',['plaintext_ballot_proto__unpack',['../ballot_8pb-c_8c.html#ad5d33fd1904abe93be5bd70e7f42478d',1,'plaintext_ballot_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#ad5d33fd1904abe93be5bd70e7f42478d',1,'plaintext_ballot_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fselection_5fproto_5f_5fdescriptor_18',['plaintext_ballot_selection_proto__descriptor',['../ballot_8pb-c_8c.html#a68990fb3122ca33b5430708b5216f827',1,'plaintext_ballot_selection_proto__descriptor:&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a68990fb3122ca33b5430708b5216f827',1,'plaintext_ballot_selection_proto__descriptor:&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fselection_5fproto_5f_5ffree_5funpacked_19',['plaintext_ballot_selection_proto__free_unpacked',['../ballot_8pb-c_8c.html#a702ee83a8f16d23b980163872cad5998',1,'plaintext_ballot_selection_proto__free_unpacked(PlaintextBallotSelectionProto *message, ProtobufCAllocator *allocator):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a702ee83a8f16d23b980163872cad5998',1,'plaintext_ballot_selection_proto__free_unpacked(PlaintextBallotSelectionProto *message, ProtobufCAllocator *allocator):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fselection_5fproto_5f_5fget_5fpacked_5fsize_20',['plaintext_ballot_selection_proto__get_packed_size',['../ballot_8pb-c_8c.html#a371502fa79c86158d7fd12ccefb4d599',1,'plaintext_ballot_selection_proto__get_packed_size(const PlaintextBallotSelectionProto *message):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a371502fa79c86158d7fd12ccefb4d599',1,'plaintext_ballot_selection_proto__get_packed_size(const PlaintextBallotSelectionProto *message):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fselection_5fproto_5f_5finit_21',['PLAINTEXT_BALLOT_SELECTION_PROTO__INIT',['../ballot_8pb-c_8h.html#a370f2354f995afe18e38740e043476ca',1,'ballot.pb-c.h']]],
  ['plaintext_5fballot_5fselection_5fproto_5f_5finit_22',['plaintext_ballot_selection_proto__init',['../ballot_8pb-c_8c.html#a1299ac3a19143711534f8f297b87b854',1,'plaintext_ballot_selection_proto__init(PlaintextBallotSelectionProto *message):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a1299ac3a19143711534f8f297b87b854',1,'plaintext_ballot_selection_proto__init(PlaintextBallotSelectionProto *message):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fselection_5fproto_5f_5fpack_23',['plaintext_ballot_selection_proto__pack',['../ballot_8pb-c_8c.html#a0eae4b97863cb8fc269f332661597e68',1,'plaintext_ballot_selection_proto__pack(const PlaintextBallotSelectionProto *message, uint8_t *out):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a0eae4b97863cb8fc269f332661597e68',1,'plaintext_ballot_selection_proto__pack(const PlaintextBallotSelectionProto *message, uint8_t *out):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fselection_5fproto_5f_5fpack_5fto_5fbuffer_24',['plaintext_ballot_selection_proto__pack_to_buffer',['../ballot_8pb-c_8c.html#ac1299e62a08e4be4d247f0a94597f61e',1,'plaintext_ballot_selection_proto__pack_to_buffer(const PlaintextBallotSelectionProto *message, ProtobufCBuffer *buffer):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#ac1299e62a08e4be4d247f0a94597f61e',1,'plaintext_ballot_selection_proto__pack_to_buffer(const PlaintextBallotSelectionProto *message, ProtobufCBuffer *buffer):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fselection_5fproto_5f_5funpack_25',['plaintext_ballot_selection_proto__unpack',['../ballot_8pb-c_8c.html#a4c65a1df1068493ffe10777f3f4e9ae5',1,'plaintext_ballot_selection_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a4c65a1df1068493ffe10777f3f4e9ae5',1,'plaintext_ballot_selection_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;ballot.pb-c.c']]],
  ['plaintextballotcontestproto_26',['PlaintextBallotContestProto',['../struct_plaintext_ballot_contest_proto.html',1,'PlaintextBallotContestProto'],['../ballot_8pb-c_8h.html#aa7b3f161d78eca514dcdca82f4bf74c9',1,'PlaintextBallotContestProto:&#160;ballot.pb-c.h']]],
  ['plaintextballotcontestproto_5fclosure_27',['PlaintextBallotContestProto_Closure',['../ballot_8pb-c_8h.html#aac1b69c704179881ee3fd212c09d733a',1,'ballot.pb-c.h']]],
  ['plaintextballotproto_28',['PlaintextBallotProto',['../struct_plaintext_ballot_proto.html',1,'PlaintextBallotProto'],['../ballot_8pb-c_8h.html#aed4c2439d8c0013ce6bf124531ae194c',1,'PlaintextBallotProto:&#160;ballot.pb-c.h']]],
  ['plaintextballotproto_5fclosure_29',['PlaintextBallotProto_Closure',['../ballot_8pb-c_8h.html#a3d607ea36e759fccbb8fc91c5b8e96bc',1,'ballot.pb-c.h']]],
  ['plaintextballotselectionproto_30',['PlaintextBallotSelectionProto',['../struct_plaintext_ballot_selection_proto.html',1,'PlaintextBallotSelectionProto'],['../ballot_8pb-c_8h.html#ac2a2c6efc9e7551f9f388e6004c28a7e',1,'PlaintextBallotSelectionProto:&#160;ballot.pb-c.h']]],
  ['plaintextballotselectionproto_5fclosure_31',['PlaintextBallotSelectionProto_Closure',['../ballot_8pb-c_8h.html#a38d26641b73e0202de570f37b5cbf8c8',1,'ballot.pb-c.h']]],
  ['polynomial_32',['polynomial',['../struct_election_key_pair_proto.html#ae18024bc22176477c5502cb73ae0b0e6',1,'ElectionKeyPairProto::polynomial'],['../struct_election_key_pair.html#abcc22da6a75bc154b6500318f24bfc24',1,'ElectionKeyPair::polynomial']]],
  ['print_5fbyte_5farray_33',['print_byte_array',['../crypto__utils_8c.html#a608e1af387f583bb689c693354314640',1,'print_byte_array(const byte *array, int size):&#160;crypto_utils.c'],['../crypto__utils_8h.html#a608e1af387f583bb689c693354314640',1,'print_byte_array(const byte *array, int size):&#160;crypto_utils.c'],['../utils_8h.html#a608e1af387f583bb689c693354314640',1,'print_byte_array(const byte *array, int size):&#160;crypto_utils.c']]],
  ['print_5fsp_5fint_34',['print_sp_int',['../crypto__utils_8c.html#aff67e835c7e405597f93aa91dca2e4b5',1,'print_sp_int(sp_int *num):&#160;crypto_utils.c'],['../crypto__utils_8h.html#aff67e835c7e405597f93aa91dca2e4b5',1,'print_sp_int(sp_int *num):&#160;crypto_utils.c']]],
  ['private_5fkey_35',['private_key',['../struct_election_key_pair_proto.html#aa41be550199177c0889b18410b1d2e62',1,'ElectionKeyPairProto::private_key'],['../struct_election_key_pair.html#a827431978f82f678e3f32bb7c2d44fac',1,'ElectionKeyPair::private_key']]],
  ['proof_36',['proof',['../struct_coefficient_proto.html#a56f3d71eeec34524890a3c290d13cfc3',1,'CoefficientProto::proof'],['../struct_coefficient.html#a181df43574913a3afc874f866f80e784',1,'Coefficient::proof'],['../struct_ciphertext_decryption_selection.html#a9de32c2ef492c8eeeaad468eee106a87',1,'CiphertextDecryptionSelection::proof']]],
  ['proof_5fchallenge_37',['proof_challenge',['../struct_ciphertext_decryption_selection_proto.html#ab6a81eb27d5631f0d6d2b20f6e84bf28',1,'CiphertextDecryptionSelectionProto']]],
  ['proof_5fdata_38',['proof_data',['../struct_ciphertext_decryption_selection_proto.html#ac1bc533cb699b528377050c86524d330',1,'CiphertextDecryptionSelectionProto']]],
  ['proof_5fpad_39',['proof_pad',['../struct_ciphertext_decryption_selection_proto.html#acc172a86710975b1a65edec860614a73',1,'CiphertextDecryptionSelectionProto']]],
  ['proof_5fresponse_40',['proof_response',['../struct_ciphertext_decryption_selection_proto.html#a86efb618f025c4594c7dfcd256a65f6c',1,'CiphertextDecryptionSelectionProto']]],
  ['protobuf_5fc_5f_5fno_5fdeprecated_41',['PROTOBUF_C__NO_DEPRECATED',['../ballot_8pb-c_8c.html#ad9480935c25b5155174487b631af52f5',1,'PROTOBUF_C__NO_DEPRECATED:&#160;ballot.pb-c.c'],['../buff_8pb-c_8c.html#ad9480935c25b5155174487b631af52f5',1,'PROTOBUF_C__NO_DEPRECATED:&#160;buff.pb-c.c'],['../tally_8pb-c_8c.html#ad9480935c25b5155174487b631af52f5',1,'PROTOBUF_C__NO_DEPRECATED:&#160;tally.pb-c.c']]],
  ['pubkey_42',['pubkey',['../struct_schnorr_proof_proto.html#a4e08bac0b5be050c12f7257bfb00c9ba',1,'SchnorrProofProto::pubkey'],['../struct_schnorr_proof.html#a8a65b2e8eba8b86965afbe5db93d4005',1,'SchnorrProof::pubkey']]],
  ['pubkey_5fcount_43',['pubkey_count',['../adapter_8c.html#a7d8099b54acfbfa5c26352d9167cc50d',1,'adapter.c']]],
  ['pubkey_5fmap_44',['pubkey_map',['../adapter_8c.html#ab8b086fa271490586e2074c2f20ebda8',1,'adapter.c']]],
  ['public_5fkey_45',['public_key',['../struct_election_key_pair_proto.html#a6fffde7ae860fecbe69e3883e69db2f9',1,'ElectionKeyPairProto::public_key'],['../struct_decryption_share_proto.html#a455c8324236075b5d2ddc2ea096fd2aa',1,'DecryptionShareProto::public_key'],['../struct_election_key_pair.html#a8a425e105922d050867cba9cef32e967',1,'ElectionKeyPair::public_key'],['../struct_ciphertext_decryption_contest.html#a7518ccc1c8449f90b76b804e6c3bcc95',1,'CiphertextDecryptionContest::public_key'],['../struct_decryption_share.html#a8e38297844ea30b76d3796c8e071dd42',1,'DecryptionShare::public_key']]],
  ['publish_5fpublic_5fkey_46',['publish_public_key',['../adapter_8c.html#a71077f58d780aba2de19f2681057ef84',1,'adapter.c']]]
];
