var searchData=
[
  ['challenge_0',['challenge',['../struct_schnorr_proof_proto.html#a52e081eaa6c77fbea05ea6cc36ee84d6',1,'SchnorrProofProto::challenge'],['../struct_schnorr_proof.html#ac0350a903118e790bab3931c3a04ebea',1,'SchnorrProof::challenge'],['../struct_chaum_pedersen_proof.html#a7ab07aa5d1a5d0d5883e04de646782c2',1,'ChaumPedersenProof::challenge']]],
  ['ciphertext_5fballot_5fproto_5f_5fdescriptor_1',['ciphertext_ballot_proto__descriptor',['../ballot_8pb-c_8c.html#af237368857c8db24289226a3e310fe19',1,'ciphertext_ballot_proto__descriptor:&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#af237368857c8db24289226a3e310fe19',1,'ciphertext_ballot_proto__descriptor:&#160;ballot.pb-c.c']]],
  ['ciphertext_5fdata_2',['ciphertext_data',['../struct_ciphertext_tally_selection_proto.html#a7bcd79cbfbb300061897112148643cbd',1,'CiphertextTallySelectionProto::ciphertext_data'],['../struct_ciphertext_tally_selection.html#a3097bb83ca83d24f3d13c4f8ed420a3f',1,'CiphertextTallySelection::ciphertext_data']]],
  ['ciphertext_5fdecryption_5fcontest_5fproto_5f_5fdescriptor_3',['ciphertext_decryption_contest_proto__descriptor',['../tally_8pb-c_8h.html#a844c25aa1bd6d8b8f89c57f855478aad',1,'ciphertext_decryption_contest_proto__descriptor:&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a844c25aa1bd6d8b8f89c57f855478aad',1,'ciphertext_decryption_contest_proto__descriptor:&#160;tally.pb-c.c']]],
  ['ciphertext_5fdecryption_5fselection_5fproto_5f_5fdescriptor_4',['ciphertext_decryption_selection_proto__descriptor',['../tally_8pb-c_8h.html#ac8c08cc5e699c0725bfc293822354367',1,'ciphertext_decryption_selection_proto__descriptor:&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#ac8c08cc5e699c0725bfc293822354367',1,'ciphertext_decryption_selection_proto__descriptor:&#160;tally.pb-c.c']]],
  ['ciphertext_5fpad_5',['ciphertext_pad',['../struct_ciphertext_tally_selection_proto.html#a5ca722298661cc27c3461947d8565683',1,'CiphertextTallySelectionProto::ciphertext_pad'],['../struct_ciphertext_tally_selection.html#a305da6622c9ddabf1dbbdcc32cb41e5e',1,'CiphertextTallySelection::ciphertext_pad']]],
  ['ciphertext_5ftally_5fcontest_5fproto_5f_5fdescriptor_6',['ciphertext_tally_contest_proto__descriptor',['../tally_8pb-c_8h.html#a635597ed385b66a3546edee299780780',1,'ciphertext_tally_contest_proto__descriptor:&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a635597ed385b66a3546edee299780780',1,'ciphertext_tally_contest_proto__descriptor:&#160;tally.pb-c.c']]],
  ['ciphertext_5ftally_5fproto_5f_5fdescriptor_7',['ciphertext_tally_proto__descriptor',['../tally_8pb-c_8h.html#a140f9de2576ae34a37946b6e420f19c5',1,'ciphertext_tally_proto__descriptor:&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a140f9de2576ae34a37946b6e420f19c5',1,'ciphertext_tally_proto__descriptor:&#160;tally.pb-c.c']]],
  ['ciphertext_5ftally_5fselection_5fproto_5f_5fdescriptor_8',['ciphertext_tally_selection_proto__descriptor',['../tally_8pb-c_8h.html#a00eb2354456a1c85803d87325d9fde31',1,'ciphertext_tally_selection_proto__descriptor:&#160;tally.pb-c.c'],['../tally_8pb-c_8c.html#a00eb2354456a1c85803d87325d9fde31',1,'ciphertext_tally_selection_proto__descriptor:&#160;tally.pb-c.c']]],
  ['code_9',['code',['../struct_ciphertext_ballot_proto.html#a37db6b72d1cc8033cf25acd8f162130b',1,'CiphertextBallotProto']]],
  ['code_5fseed_10',['code_seed',['../struct_ciphertext_ballot_proto.html#a00d144e9becd90cd99c84a9d879c97c7',1,'CiphertextBallotProto']]],
  ['coefficient_5fproto_5f_5fdescriptor_11',['coefficient_proto__descriptor',['../buff_8pb-c_8c.html#aebef669bb8e0f7de74819a1d7a04cf97',1,'coefficient_proto__descriptor:&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#aebef669bb8e0f7de74819a1d7a04cf97',1,'coefficient_proto__descriptor:&#160;buff.pb-c.c']]],
  ['coefficients_12',['coefficients',['../struct_election_polynomial_proto.html#a124073c954d847778ecbc5eb12657403',1,'ElectionPolynomialProto::coefficients'],['../struct_election_polynomial.html#a26e365ac0cd621a2d2df66fa526aed70',1,'ElectionPolynomial::coefficients']]],
  ['commitment_13',['commitment',['../struct_schnorr_proof_proto.html#a61c8cb40a437e9ca3d344aab74f6950d',1,'SchnorrProofProto::commitment'],['../struct_coefficient_proto.html#a839917632c3b3f1257c595fe07443ef8',1,'CoefficientProto::commitment'],['../struct_schnorr_proof.html#a3783b481f6750085015ba33c5c897c20',1,'SchnorrProof::commitment'],['../struct_coefficient.html#a6be1af9cf2fe7dc6059ba26084fcafc1',1,'Coefficient::commitment']]],
  ['commitment_5fhash_14',['commitment_hash',['../struct_election_joint_key.html#a1830bb04e21e1b9ec04995e7bb1099cb',1,'ElectionJointKey']]],
  ['contests_15',['contests',['../struct_plaintext_ballot_proto.html#a68f7f60c80481df18c6274901caa5ea2',1,'PlaintextBallotProto::contests'],['../struct_ciphertext_tally_proto.html#a893ecc6860e9de52f3a19cc2248432ca',1,'CiphertextTallyProto::contests'],['../struct_decryption_share_proto.html#a5cc67bae50f948dc3202f19d8aa67651',1,'DecryptionShareProto::contests'],['../struct_ciphertext_tally.html#ae63b6fd5ebec94d6cd0258f65a48d8f3',1,'CiphertextTally::contests'],['../struct_decryption_share.html#a78f679349d7f45df9412b1c67994c880',1,'DecryptionShare::contests']]],
  ['crypto_5fhash_16',['crypto_hash',['../struct_ciphertext_ballot_proto.html#aa1d9942b95a0b77edca61e0c49995cab',1,'CiphertextBallotProto']]]
];
