var searchData=
[
  ['n_5fballot_5fselections_0',['n_ballot_selections',['../struct_plaintext_ballot_contest_proto.html#a17f68e02113ec9b82d201df21a2602ed',1,'PlaintextBallotContestProto']]],
  ['n_5fcoefficients_1',['n_coefficients',['../struct_election_polynomial_proto.html#a759f32344d2dfbfab0bca94826c5a487',1,'ElectionPolynomialProto']]],
  ['n_5fcontests_2',['n_contests',['../struct_plaintext_ballot_proto.html#aae4fc8fb965ef85a1d141a45209213eb',1,'PlaintextBallotProto::n_contests'],['../struct_ciphertext_tally_proto.html#acfe41f57546fe1c661270bf3a7d17479',1,'CiphertextTallyProto::n_contests'],['../struct_decryption_share_proto.html#a9dea299dd06f2669598af0efd802ad1e',1,'DecryptionShareProto::n_contests']]],
  ['n_5fselections_3',['n_selections',['../struct_ciphertext_tally_contest_proto.html#a34cd051df9b819c5741c62457ce947ec',1,'CiphertextTallyContestProto::n_selections'],['../struct_ciphertext_decryption_contest_proto.html#a48c42c1040741a9e1e287011a0ec8895',1,'CiphertextDecryptionContestProto::n_selections']]],
  ['num_5fcoefficients_4',['num_coefficients',['../struct_election_polynomial_proto.html#a196485bde4447d7d1ca7ad162920a485',1,'ElectionPolynomialProto::num_coefficients'],['../struct_election_polynomial.html#a1e162dcfcc9bfac3788ecb5fb79fa26f',1,'ElectionPolynomial::num_coefficients']]],
  ['num_5fcontest_5',['num_contest',['../struct_ciphertext_tally_proto.html#abdb3b600d10869be8c29f6e8ef9b5b11',1,'CiphertextTallyProto::num_contest'],['../struct_ciphertext_tally.html#adc4967056e2aa6fc75e9aa079525539d',1,'CiphertextTally::num_contest'],['../struct_decryption_share.html#aced6cb141aa87be79ff9add20aa84983',1,'DecryptionShare::num_contest']]],
  ['num_5fcontests_6',['num_contests',['../struct_plaintext_ballot_proto.html#ad6ff9c59b637891a3fb6a589d9abc123',1,'PlaintextBallotProto::num_contests'],['../struct_decryption_share_proto.html#a330e6d68a298b1c315ac7960237ec932',1,'DecryptionShareProto::num_contests']]],
  ['num_5fselections_7',['num_selections',['../struct_plaintext_ballot_contest_proto.html#aa3efcc9ae87286a6ba1576da52da159b',1,'PlaintextBallotContestProto::num_selections'],['../struct_ciphertext_tally_contest_proto.html#a383623e3d043036602e6d9e13c84c6d5',1,'CiphertextTallyContestProto::num_selections'],['../struct_ciphertext_decryption_contest_proto.html#ac4ea1e7f7298eb66bec656bdee3903cb',1,'CiphertextDecryptionContestProto::num_selections'],['../struct_ciphertext_tally_contest.html#ad83030ad988ece2c6fadff6bb1e86de3',1,'CiphertextTallyContest::num_selections'],['../struct_ciphertext_decryption_contest.html#ad9a8874d52c63c33c59879beaa1d2f79',1,'CiphertextDecryptionContest::num_selections']]]
];
