var searchData=
[
  ['schnorr_5fproof_5fproto_5f_5fdescriptor_0',['schnorr_proof_proto__descriptor',['../buff_8pb-c_8c.html#ad813a9e488035ddf46eceedeac28deab',1,'schnorr_proof_proto__descriptor:&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#ad813a9e488035ddf46eceedeac28deab',1,'schnorr_proof_proto__descriptor:&#160;buff.pb-c.c']]],
  ['selections_1',['selections',['../struct_ciphertext_tally_contest_proto.html#ae17c50de8a4134b1d030d8ed8850d19a',1,'CiphertextTallyContestProto::selections'],['../struct_ciphertext_decryption_contest_proto.html#a75802b5de6e6d58ef9f20f8daa1c5fa5',1,'CiphertextDecryptionContestProto::selections'],['../struct_ciphertext_tally_contest.html#ad8ebbdaa8b8b7db39df38b9a89c33ee0',1,'CiphertextTallyContest::selections'],['../struct_ciphertext_decryption_contest.html#ab1aba00dd51777c42c4362115e9a9052',1,'CiphertextDecryptionContest::selections']]],
  ['sender_2',['sender',['../struct_election_partial_key_pair_backup_proto.html#a985836f5e5c53f226bce1860ee4f8725',1,'ElectionPartialKeyPairBackupProto::sender'],['../struct_election_partial_key_verification_proto.html#aabc67c6419d978138b1f534f7bfbdcf9',1,'ElectionPartialKeyVerificationProto::sender'],['../struct_election_partial_key_pair_backup.html#ad2a79f1b331cf8eb5940756e85ba6d9e',1,'ElectionPartialKeyPairBackup::sender'],['../struct_election_partial_key_verification.html#a0188182a7699663d8749c5e9269939a2',1,'ElectionPartialKeyVerification::sender']]],
  ['sequence_5forder_3',['sequence_order',['../struct_ciphertext_tally_contest_proto.html#a3ac909e40681b8e6ccb378b6ab036916',1,'CiphertextTallyContestProto::sequence_order'],['../struct_ciphertext_tally_contest.html#a9f242be885b52ee5de78c5cb814774c8',1,'CiphertextTallyContest::sequence_order']]],
  ['style_5fid_4',['style_id',['../struct_plaintext_ballot_proto.html#ac41773956b05451b68711a4913442d72',1,'PlaintextBallotProto::style_id'],['../struct_ciphertext_ballot_proto.html#a7a609ea51379b0dfc3061a92362cfffa',1,'CiphertextBallotProto::style_id']]]
];
