var searchData=
[
  ['plaintextballotcontestproto_0',['PlaintextBallotContestProto',['../struct_plaintext_ballot_contest_proto.html',1,'']]],
  ['plaintextballotproto_1',['PlaintextBallotProto',['../struct_plaintext_ballot_proto.html',1,'']]],
  ['plaintextballotselectionproto_2',['PlaintextBallotSelectionProto',['../struct_plaintext_ballot_selection_proto.html',1,'']]]
];
