var searchData=
[
  ['plaintext_5fballot_5fcontest_5fproto_5f_5ffree_5funpacked_0',['plaintext_ballot_contest_proto__free_unpacked',['../ballot_8pb-c_8c.html#a9136519ba621f64600451f19624010dd',1,'plaintext_ballot_contest_proto__free_unpacked(PlaintextBallotContestProto *message, ProtobufCAllocator *allocator):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a9136519ba621f64600451f19624010dd',1,'plaintext_ballot_contest_proto__free_unpacked(PlaintextBallotContestProto *message, ProtobufCAllocator *allocator):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fcontest_5fproto_5f_5fget_5fpacked_5fsize_1',['plaintext_ballot_contest_proto__get_packed_size',['../ballot_8pb-c_8c.html#a38239d01cd4669c037fc44628e9b2f30',1,'plaintext_ballot_contest_proto__get_packed_size(const PlaintextBallotContestProto *message):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a38239d01cd4669c037fc44628e9b2f30',1,'plaintext_ballot_contest_proto__get_packed_size(const PlaintextBallotContestProto *message):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fcontest_5fproto_5f_5finit_2',['plaintext_ballot_contest_proto__init',['../ballot_8pb-c_8c.html#a23b381bce00ebd737465dcf39c1ff7fa',1,'plaintext_ballot_contest_proto__init(PlaintextBallotContestProto *message):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a23b381bce00ebd737465dcf39c1ff7fa',1,'plaintext_ballot_contest_proto__init(PlaintextBallotContestProto *message):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fcontest_5fproto_5f_5fpack_3',['plaintext_ballot_contest_proto__pack',['../ballot_8pb-c_8c.html#a50c54e4c0790a33d87a59368c4b699b7',1,'plaintext_ballot_contest_proto__pack(const PlaintextBallotContestProto *message, uint8_t *out):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a50c54e4c0790a33d87a59368c4b699b7',1,'plaintext_ballot_contest_proto__pack(const PlaintextBallotContestProto *message, uint8_t *out):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fcontest_5fproto_5f_5fpack_5fto_5fbuffer_4',['plaintext_ballot_contest_proto__pack_to_buffer',['../ballot_8pb-c_8c.html#aaf61c115251f86aade0a6123cd5420b3',1,'plaintext_ballot_contest_proto__pack_to_buffer(const PlaintextBallotContestProto *message, ProtobufCBuffer *buffer):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#aaf61c115251f86aade0a6123cd5420b3',1,'plaintext_ballot_contest_proto__pack_to_buffer(const PlaintextBallotContestProto *message, ProtobufCBuffer *buffer):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fcontest_5fproto_5f_5funpack_5',['plaintext_ballot_contest_proto__unpack',['../ballot_8pb-c_8c.html#a3e96c9a7e769f5e412a3f7dd27932fee',1,'plaintext_ballot_contest_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a3e96c9a7e769f5e412a3f7dd27932fee',1,'plaintext_ballot_contest_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fproto_5f_5ffree_5funpacked_6',['plaintext_ballot_proto__free_unpacked',['../ballot_8pb-c_8c.html#a6cde6feb2e2905b1fe5a156a6cc0d946',1,'plaintext_ballot_proto__free_unpacked(PlaintextBallotProto *message, ProtobufCAllocator *allocator):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a6cde6feb2e2905b1fe5a156a6cc0d946',1,'plaintext_ballot_proto__free_unpacked(PlaintextBallotProto *message, ProtobufCAllocator *allocator):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fproto_5f_5fget_5fpacked_5fsize_7',['plaintext_ballot_proto__get_packed_size',['../ballot_8pb-c_8c.html#afcf795988bf5620b3eb656e69b154c99',1,'plaintext_ballot_proto__get_packed_size(const PlaintextBallotProto *message):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#afcf795988bf5620b3eb656e69b154c99',1,'plaintext_ballot_proto__get_packed_size(const PlaintextBallotProto *message):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fproto_5f_5finit_8',['plaintext_ballot_proto__init',['../ballot_8pb-c_8c.html#aad2fb92157210abf0b322dbeb1533d2b',1,'plaintext_ballot_proto__init(PlaintextBallotProto *message):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#aad2fb92157210abf0b322dbeb1533d2b',1,'plaintext_ballot_proto__init(PlaintextBallotProto *message):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fproto_5f_5fpack_9',['plaintext_ballot_proto__pack',['../ballot_8pb-c_8c.html#ad6ea43abb4481fcb7d02d24599d6bb97',1,'plaintext_ballot_proto__pack(const PlaintextBallotProto *message, uint8_t *out):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#ad6ea43abb4481fcb7d02d24599d6bb97',1,'plaintext_ballot_proto__pack(const PlaintextBallotProto *message, uint8_t *out):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fproto_5f_5fpack_5fto_5fbuffer_10',['plaintext_ballot_proto__pack_to_buffer',['../ballot_8pb-c_8c.html#a6217f6bd8edc4e4ae5fc32e151ff4bed',1,'plaintext_ballot_proto__pack_to_buffer(const PlaintextBallotProto *message, ProtobufCBuffer *buffer):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a6217f6bd8edc4e4ae5fc32e151ff4bed',1,'plaintext_ballot_proto__pack_to_buffer(const PlaintextBallotProto *message, ProtobufCBuffer *buffer):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fproto_5f_5funpack_11',['plaintext_ballot_proto__unpack',['../ballot_8pb-c_8c.html#ad5d33fd1904abe93be5bd70e7f42478d',1,'plaintext_ballot_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#ad5d33fd1904abe93be5bd70e7f42478d',1,'plaintext_ballot_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fselection_5fproto_5f_5ffree_5funpacked_12',['plaintext_ballot_selection_proto__free_unpacked',['../ballot_8pb-c_8c.html#a702ee83a8f16d23b980163872cad5998',1,'plaintext_ballot_selection_proto__free_unpacked(PlaintextBallotSelectionProto *message, ProtobufCAllocator *allocator):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a702ee83a8f16d23b980163872cad5998',1,'plaintext_ballot_selection_proto__free_unpacked(PlaintextBallotSelectionProto *message, ProtobufCAllocator *allocator):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fselection_5fproto_5f_5fget_5fpacked_5fsize_13',['plaintext_ballot_selection_proto__get_packed_size',['../ballot_8pb-c_8c.html#a371502fa79c86158d7fd12ccefb4d599',1,'plaintext_ballot_selection_proto__get_packed_size(const PlaintextBallotSelectionProto *message):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a371502fa79c86158d7fd12ccefb4d599',1,'plaintext_ballot_selection_proto__get_packed_size(const PlaintextBallotSelectionProto *message):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fselection_5fproto_5f_5finit_14',['plaintext_ballot_selection_proto__init',['../ballot_8pb-c_8c.html#a1299ac3a19143711534f8f297b87b854',1,'plaintext_ballot_selection_proto__init(PlaintextBallotSelectionProto *message):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a1299ac3a19143711534f8f297b87b854',1,'plaintext_ballot_selection_proto__init(PlaintextBallotSelectionProto *message):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fselection_5fproto_5f_5fpack_15',['plaintext_ballot_selection_proto__pack',['../ballot_8pb-c_8c.html#a0eae4b97863cb8fc269f332661597e68',1,'plaintext_ballot_selection_proto__pack(const PlaintextBallotSelectionProto *message, uint8_t *out):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a0eae4b97863cb8fc269f332661597e68',1,'plaintext_ballot_selection_proto__pack(const PlaintextBallotSelectionProto *message, uint8_t *out):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fselection_5fproto_5f_5fpack_5fto_5fbuffer_16',['plaintext_ballot_selection_proto__pack_to_buffer',['../ballot_8pb-c_8c.html#ac1299e62a08e4be4d247f0a94597f61e',1,'plaintext_ballot_selection_proto__pack_to_buffer(const PlaintextBallotSelectionProto *message, ProtobufCBuffer *buffer):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#ac1299e62a08e4be4d247f0a94597f61e',1,'plaintext_ballot_selection_proto__pack_to_buffer(const PlaintextBallotSelectionProto *message, ProtobufCBuffer *buffer):&#160;ballot.pb-c.c']]],
  ['plaintext_5fballot_5fselection_5fproto_5f_5funpack_17',['plaintext_ballot_selection_proto__unpack',['../ballot_8pb-c_8c.html#a4c65a1df1068493ffe10777f3f4e9ae5',1,'plaintext_ballot_selection_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;ballot.pb-c.c'],['../ballot_8pb-c_8h.html#a4c65a1df1068493ffe10777f3f4e9ae5',1,'plaintext_ballot_selection_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;ballot.pb-c.c']]],
  ['print_5fbyte_5farray_18',['print_byte_array',['../crypto__utils_8c.html#a608e1af387f583bb689c693354314640',1,'print_byte_array(const byte *array, int size):&#160;crypto_utils.c'],['../crypto__utils_8h.html#a608e1af387f583bb689c693354314640',1,'print_byte_array(const byte *array, int size):&#160;crypto_utils.c'],['../utils_8h.html#a608e1af387f583bb689c693354314640',1,'print_byte_array(const byte *array, int size):&#160;crypto_utils.c']]],
  ['print_5fsp_5fint_19',['print_sp_int',['../crypto__utils_8c.html#aff67e835c7e405597f93aa91dca2e4b5',1,'print_sp_int(sp_int *num):&#160;crypto_utils.c'],['../crypto__utils_8h.html#aff67e835c7e405597f93aa91dca2e4b5',1,'print_sp_int(sp_int *num):&#160;crypto_utils.c']]],
  ['publish_5fpublic_5fkey_20',['publish_public_key',['../adapter_8c.html#a71077f58d780aba2de19f2681057ef84',1,'adapter.c']]]
];
