var searchData=
[
  ['value_0',['value',['../struct_coefficient_proto.html#aed30f1e0f806e6ebf4f4a065772fbaff',1,'CoefficientProto::value'],['../struct_coefficient.html#adf4779100fa8e689aefd78eb0ba83cde',1,'Coefficient::value']]],
  ['verified_1',['verified',['../struct_election_partial_key_verification_proto.html#a49d1363b93f3e5bf5521d0a3b8c40673',1,'ElectionPartialKeyVerificationProto::verified'],['../struct_election_partial_key_verification.html#a400a8c5acbc462cd93d60bcc6c68fbe3',1,'ElectionPartialKeyVerification::verified']]],
  ['verifier_2',['verifier',['../struct_election_partial_key_verification_proto.html#a9a87b246d9024e334a56c3534a3d4523',1,'ElectionPartialKeyVerificationProto::verifier'],['../struct_election_partial_key_verification.html#a536dfde1858807a80b56912c1c8c3ccb',1,'ElectionPartialKeyVerification::verifier']]],
  ['verify_5felection_5fpartial_5fkey_5fbackup_3',['verify_election_partial_key_backup',['../model_8h.html#a8fd15aff2949ac5a5fc1e740fc56d86f',1,'verify_election_partial_key_backup(ElectionKeyPair *receiver, ElectionKeyPair *sender, ElectionPartialKeyPairBackup *backup, ElectionPartialKeyVerification *verification):&#160;model.c'],['../model_8c.html#a8fd15aff2949ac5a5fc1e740fc56d86f',1,'verify_election_partial_key_backup(ElectionKeyPair *receiver, ElectionKeyPair *sender, ElectionPartialKeyPairBackup *backup, ElectionPartialKeyVerification *verification):&#160;model.c']]],
  ['verify_5fpolynomial_5fcoordinate_4',['verify_polynomial_coordinate',['../crypto__utils_8c.html#a18fa85661e1754a2b5acc63843de9c49',1,'verify_polynomial_coordinate(uint8_t *exponent_modifier, ElectionPolynomial *polynomial, sp_int *coordinate):&#160;crypto_utils.c'],['../crypto__utils_8h.html#a18fa85661e1754a2b5acc63843de9c49',1,'verify_polynomial_coordinate(uint8_t *exponent_modifier, ElectionPolynomial *polynomial, sp_int *coordinate):&#160;crypto_utils.c']]],
  ['view_2ec_5',['view.c',['../view_8c.html',1,'']]],
  ['view_2eh_6',['view.h',['../view_8h.html',1,'']]],
  ['vote_7',['vote',['../struct_plaintext_ballot_selection_proto.html#ad7c4c2b649fc725fa20f9d6ee83dd2ac',1,'PlaintextBallotSelectionProto']]]
];
