var searchData=
[
  ['value_0',['value',['../struct_coefficient_proto.html#aed30f1e0f806e6ebf4f4a065772fbaff',1,'CoefficientProto::value'],['../struct_coefficient.html#adf4779100fa8e689aefd78eb0ba83cde',1,'Coefficient::value']]],
  ['verified_1',['verified',['../struct_election_partial_key_verification_proto.html#a49d1363b93f3e5bf5521d0a3b8c40673',1,'ElectionPartialKeyVerificationProto::verified'],['../struct_election_partial_key_verification.html#a400a8c5acbc462cd93d60bcc6c68fbe3',1,'ElectionPartialKeyVerification::verified']]],
  ['verifier_2',['verifier',['../struct_election_partial_key_verification_proto.html#a9a87b246d9024e334a56c3534a3d4523',1,'ElectionPartialKeyVerificationProto::verifier'],['../struct_election_partial_key_verification.html#a536dfde1858807a80b56912c1c8c3ccb',1,'ElectionPartialKeyVerification::verifier']]],
  ['vote_3',['vote',['../struct_plaintext_ballot_selection_proto.html#ad7c4c2b649fc725fa20f9d6ee83dd2ac',1,'PlaintextBallotSelectionProto']]]
];
