var searchData=
[
  ['schnorr_5fproof_5fproto_5f_5fdescriptor_0',['schnorr_proof_proto__descriptor',['../buff_8pb-c_8c.html#ad813a9e488035ddf46eceedeac28deab',1,'schnorr_proof_proto__descriptor:&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#ad813a9e488035ddf46eceedeac28deab',1,'schnorr_proof_proto__descriptor:&#160;buff.pb-c.c']]],
  ['schnorr_5fproof_5fproto_5f_5ffree_5funpacked_1',['schnorr_proof_proto__free_unpacked',['../buff_8pb-c_8c.html#ace34838ac31eea82c83dcc2d06dbbb0e',1,'schnorr_proof_proto__free_unpacked(SchnorrProofProto *message, ProtobufCAllocator *allocator):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#ace34838ac31eea82c83dcc2d06dbbb0e',1,'schnorr_proof_proto__free_unpacked(SchnorrProofProto *message, ProtobufCAllocator *allocator):&#160;buff.pb-c.c']]],
  ['schnorr_5fproof_5fproto_5f_5fget_5fpacked_5fsize_2',['schnorr_proof_proto__get_packed_size',['../buff_8pb-c_8c.html#af2c00619737f0cc6afc82401a26bc49c',1,'schnorr_proof_proto__get_packed_size(const SchnorrProofProto *message):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#af2c00619737f0cc6afc82401a26bc49c',1,'schnorr_proof_proto__get_packed_size(const SchnorrProofProto *message):&#160;buff.pb-c.c']]],
  ['schnorr_5fproof_5fproto_5f_5finit_3',['SCHNORR_PROOF_PROTO__INIT',['../buff_8pb-c_8h.html#a4108ad6a91a37376d671969fc983ec62',1,'buff.pb-c.h']]],
  ['schnorr_5fproof_5fproto_5f_5finit_4',['schnorr_proof_proto__init',['../buff_8pb-c_8c.html#a40fe3ddc1ab77a85ce43202dacf6ac70',1,'schnorr_proof_proto__init(SchnorrProofProto *message):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a40fe3ddc1ab77a85ce43202dacf6ac70',1,'schnorr_proof_proto__init(SchnorrProofProto *message):&#160;buff.pb-c.c']]],
  ['schnorr_5fproof_5fproto_5f_5fpack_5',['schnorr_proof_proto__pack',['../buff_8pb-c_8c.html#a4b6daac6abe5221e07863f38b2746cb9',1,'schnorr_proof_proto__pack(const SchnorrProofProto *message, uint8_t *out):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a4b6daac6abe5221e07863f38b2746cb9',1,'schnorr_proof_proto__pack(const SchnorrProofProto *message, uint8_t *out):&#160;buff.pb-c.c']]],
  ['schnorr_5fproof_5fproto_5f_5fpack_5fto_5fbuffer_6',['schnorr_proof_proto__pack_to_buffer',['../buff_8pb-c_8c.html#a8e51561f0c20b5b1fdb9eaa2172e1425',1,'schnorr_proof_proto__pack_to_buffer(const SchnorrProofProto *message, ProtobufCBuffer *buffer):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a8e51561f0c20b5b1fdb9eaa2172e1425',1,'schnorr_proof_proto__pack_to_buffer(const SchnorrProofProto *message, ProtobufCBuffer *buffer):&#160;buff.pb-c.c']]],
  ['schnorr_5fproof_5fproto_5f_5funpack_7',['schnorr_proof_proto__unpack',['../buff_8pb-c_8c.html#a6003e82a40f129ffc93a909890eb00d1',1,'schnorr_proof_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;buff.pb-c.c'],['../buff_8pb-c_8h.html#a6003e82a40f129ffc93a909890eb00d1',1,'schnorr_proof_proto__unpack(ProtobufCAllocator *allocator, size_t len, const uint8_t *data):&#160;buff.pb-c.c']]],
  ['schnorrproof_8',['SchnorrProof',['../struct_schnorr_proof.html',1,'']]],
  ['schnorrproofproto_9',['SchnorrProofProto',['../struct_schnorr_proof_proto.html',1,'SchnorrProofProto'],['../buff_8pb-c_8h.html#a231ef0e83ee6d32a3d40f678813d8eb1',1,'SchnorrProofProto:&#160;buff.pb-c.h']]],
  ['schnorrproofproto_5fclosure_10',['SchnorrProofProto_Closure',['../buff_8pb-c_8h.html#a159c0ca094cee55e4a827912a2749116',1,'buff.pb-c.h']]],
  ['scrypt_5ftest_5fall_11',['SCRYPT_TEST_ALL',['../user__settings_8h.html#a8912551e1b4c27a896fc8945c7d6fe96',1,'user_settings.h']]],
  ['selections_12',['selections',['../struct_ciphertext_tally_contest_proto.html#ae17c50de8a4134b1d030d8ed8850d19a',1,'CiphertextTallyContestProto::selections'],['../struct_ciphertext_decryption_contest_proto.html#a75802b5de6e6d58ef9f20f8daa1c5fa5',1,'CiphertextDecryptionContestProto::selections'],['../struct_ciphertext_tally_contest.html#ad8ebbdaa8b8b7db39df38b9a89c33ee0',1,'CiphertextTallyContest::selections'],['../struct_ciphertext_decryption_contest.html#ab1aba00dd51777c42c4362115e9a9052',1,'CiphertextDecryptionContest::selections']]],
  ['sender_13',['sender',['../struct_election_partial_key_pair_backup_proto.html#a985836f5e5c53f226bce1860ee4f8725',1,'ElectionPartialKeyPairBackupProto::sender'],['../struct_election_partial_key_verification_proto.html#aabc67c6419d978138b1f534f7bfbdcf9',1,'ElectionPartialKeyVerificationProto::sender'],['../struct_election_partial_key_pair_backup.html#ad2a79f1b331cf8eb5940756e85ba6d9e',1,'ElectionPartialKeyPairBackup::sender'],['../struct_election_partial_key_verification.html#a0188182a7699663d8749c5e9269939a2',1,'ElectionPartialKeyVerification::sender']]],
  ['sequence_5forder_14',['sequence_order',['../struct_ciphertext_tally_contest_proto.html#a3ac909e40681b8e6ccb378b6ab036916',1,'CiphertextTallyContestProto::sequence_order'],['../struct_ciphertext_tally_contest.html#a9f242be885b52ee5de78c5cb814774c8',1,'CiphertextTallyContest::sequence_order']]],
  ['serialize_2ec_15',['serialize.c',['../serialize_8c.html',1,'']]],
  ['serialize_2eh_16',['serialize.h',['../serialize_8h.html',1,'']]],
  ['serialize_5fdecryptionshare_17',['serialize_DecryptionShare',['../serialize_8h.html#a7640857cd4fc176439198a93f0234188',1,'serialize_DecryptionShare(DecryptionShare *share, unsigned *len):&#160;serialize.c'],['../serialize_8c.html#a7640857cd4fc176439198a93f0234188',1,'serialize_DecryptionShare(DecryptionShare *share, unsigned *len):&#160;serialize.c']]],
  ['serialize_5felection_5fkey_5fpair_18',['serialize_election_key_pair',['../serialize_8h.html#aacb3d0a5afd843eff0caaec1214c99ff',1,'serialize_election_key_pair(ElectionKeyPair *key_pair, unsigned *len):&#160;serialize.c'],['../serialize_8c.html#aacb3d0a5afd843eff0caaec1214c99ff',1,'serialize_election_key_pair(ElectionKeyPair *key_pair, unsigned *len):&#160;serialize.c']]],
  ['serialize_5felection_5fpartial_5fkey_5fbackup_19',['serialize_election_partial_key_backup',['../serialize_8h.html#a2b605b24c3b168fc5907e6abf3b30088',1,'serialize_election_partial_key_backup(ElectionPartialKeyPairBackup *backup, unsigned *len):&#160;serialize.c'],['../serialize_8c.html#a2b605b24c3b168fc5907e6abf3b30088',1,'serialize_election_partial_key_backup(ElectionPartialKeyPairBackup *backup, unsigned *len):&#160;serialize.c']]],
  ['serialize_5felection_5fpartial_5fkey_5fverification_20',['serialize_election_partial_key_verification',['../serialize_8h.html#a065e4b5853a910851f778c3344281aee',1,'serialize_election_partial_key_verification(ElectionPartialKeyVerification *verification, unsigned *len):&#160;serialize.c'],['../serialize_8c.html#a065e4b5853a910851f778c3344281aee',1,'serialize_election_partial_key_verification(ElectionPartialKeyVerification *verification, unsigned *len):&#160;serialize.c']]],
  ['sp_5fmath_21',['SP_MATH',['../user__settings_8h.html#af8affbf6f757618b250ac650ca4993b6',1,'user_settings.h']]],
  ['style_5fid_22',['style_id',['../struct_plaintext_ballot_proto.html#ac41773956b05451b68711a4913442d72',1,'PlaintextBallotProto::style_id'],['../struct_ciphertext_ballot_proto.html#a7a609ea51379b0dfc3061a92362cfffa',1,'CiphertextBallotProto::style_id']]]
];
